# fugazi

./: .gitignore  CLAUDE.md  CLI.md  Cargo.toml  README.md  STRATEGIES.md
.github/workflows/: ci.yml  release.yml
doc/: CLI.md  COSTS.md  METRICS.md  STRATEGIES.md
examples/: backtest.rs  basket.yml  binance.yml  binance_testnet.rs  candle_signal.rs  candles.csv  ibkr.yml  multi_output.rs  pairs.rs  pairs.yml  params.yml  strategy.params.yml  strategy.rs  strategy.yml  streaming.rs
python/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/src/: lib.rs
python/tests/: test_arcana.py  test_fugazi.py  test_readme.py  test_specs.py
src/: backtest.rs  indicator.rs  lib.rs  market.rs  metrics.rs  runtime.rs  signal.rs  snapshot.rs  strategy.rs  time.rs  types.rs  wallet.rs
src/cli/: args.rs  backtest.rs  batch.rs  calendar.rs  chart.rs  completions.rs  convert.rs  costs.rs  csv_source.rs  data.rs  dyn_.rs  dyn_indicator.rs  dynd.rs  file.rs  get.rs  glob.rs  imports.rs  input.rs  list.rs  main.rs  metrics.rs  optimize.rs  overlay.rs  params.rs  pool.rs  run.rs  sigils.rs  spec.rs  style.rs
src/cli/costs/: config.rs  mod.rs  spec.rs
src/cli/spec/: basket.rs  expr.rs  mod.rs  multi_asset.rs  pairs.rs  portfolio.rs  preset.rs  signal.rs  source.rs  strategy.rs  template.rs  trailing.rs
src/costs/: mod.rs
src/indicators/: ad.rs  adx.rs  aroon.rs  atr.rs  bollinger.rs  book.rs  calendar.rs  candle.rs  cci.rs  compare.rs  component.rs  correlation.rs  crosses.rs  dispatch.rs  dmi.rs  donchian.rs  ema.rs  entry.rs  ext.rs  garman_klass.rs  get.rs  hma.rs  identity.rs  if_else.rs  keltner.rs  kurtosis.rs  log.rs  logic.rs  macd.rs  mfi.rs  mod.rs  obv.rs  ops.rs  parkinson.rs  pick.rs  position.rs  rma.rs  rogers_satchell.rs  rsi.rs  sar.rs  (+18 more)
src/live/: binance.rs  mod.rs
src/portfolio/: mod.rs  policy.rs  rebalance.rs  wallet.rs
src/signals/: compare.rs
src/sources/: binance.rs  coingecko.rs  coinmarketcap.rs  mod.rs  yahoo.rs
src/spec/: args.rs  backtest.rs  basket.rs  calendar.rs  convert.rs  dyn_indicator.rs  expr.rs  imports.rs  input.rs  metrics.rs  mod.rs  multi_asset.rs  optimize.rs  pairs.rs  params.rs  portfolio.rs  preset.rs  signal.rs  strategy.rs  template.rs  trailing.rs
src/spec/costs/: config.rs  mod.rs  spec.rs
src/strategies/: basket.rs  composite.rs  mean_reversion.rs  mod.rs  momentum.rs  multi_asset.rs  pairs.rs  single_asset.rs  trend.rs  volume.rs
tests/: batch.rs  composition.rs  costs.rs  cross_asset.rs  examples_compile.rs  live_binance.rs  metrics_validation.rs  overlays_typed.rs  pairs.rs  perf_bench.rs  portfolio.rs  run.rs  source_generic_leaves.rs  sources_binance.rs  sources_coinmarketcap.rs  sources_yahoo.rs  strategies.rs  talib_validation.rs  warm_up.rs
tests/data/: README.md  metrics_expected.csv
tools/: environment.yml  gen_talib_fixtures.py
