[package]
name = "fugazi"
version = "0.7.0"
edition = "2024"
description = "A library of incremental technical-analysis indicators, signals and strategies"
license = "MIT"
repository = "https://github.com/acpuchades/fugazi"
readme = "README.md"
keywords = ["trading", "technical-analysis", "indicators", "finance", "incremental"]
categories = ["finance", "mathematics"]

[lib]
name = "fugazi"
path = "src/lib.rs"

# The `fugazi` binary is the command-line backtester: it loads a strategy.yml,
# assembles candle data from one or more --series, and runs it through a paper
# wallet (see `src/cli/`). Most of the dependencies below are pulled in only to
# build the CLI binary; the exceptions are `serde`/`serde_json` (library uses
# them for indicator/signal serialisation in the CLI) and the deps gated behind
# the `sources` feature (`reqwest`/`tokio`/`time`/`thiserror`), which the
# library uses for the `sources` module (remote candle providers like Binance).
# The CLI binary transitively uses `fugazi::sources` for its `get` subcommand,
# so the binary is only built when the `sources` feature is enabled — which it
# is by default.
[[bin]]
name = "fugazi"
path = "src/cli/main.rs"
required-features = ["sources"]

# The `sources` feature pulls in the async HTTP stack the remote candle
# providers (`fugazi::sources`) rely on. Default-on so `cargo build` builds
# the CLI unchanged; a library consumer that only wants the pure
# indicator/backtest core can opt out with `default-features = false`.
[features]
default = ["sources"]
sources = ["dep:reqwest", "dep:tokio", "dep:time", "dep:thiserror"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_norway = "0.9"
serde_json = "1"
csv = "1"
anyhow = "1"
indicatif = "0.17"
console = "0.15"
rayon = "1"
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "area_series", "ttf"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"], optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros"], optional = true }
time = { version = "0.3", features = ["formatting", "parsing", "macros"], optional = true }
thiserror = { version = "1", optional = true }
interim = { version = "0.2.1", default-features = false, features = ["std", "time_0_3"] }

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"

# The Python bindings live in their own workspace member (`python/`), which is
# the only crate that pulls in PyO3 — see that crate's README for build
# instructions.
[workspace]
members = ["python"]
resolver = "2"
