[package]
name = "fugazi"
version = "0.8.0"
edition = "2024"
description = "A library of incremental technical-analysis indicators, signals and strategies"
license = "MIT"
repository = "https://github.com/acpuchades/fugazi"
readme = "README.md"
keywords = ["trading", "technical-analysis", "indicators", "finance", "incremental"]
categories = ["finance", "mathematics"]

[lib]
name = "fugazi"
path = "src/lib.rs"

# The `fugazi` binary is the command-line backtester: it loads a strategy.yml,
# assembles candle data from one or more --series, and runs it through a paper
# wallet (see `src/cli/`). Its dependencies are gated behind the `cli` feature
# below; the library proper uses only `serde`/`serde_json` (in the `sources`
# module) and the deps gated behind the `sources` feature.
[[bin]]
name = "fugazi"
path = "src/cli/main.rs"
required-features = ["cli"]

# `sources` pulls in the async HTTP stack the remote candle providers
# (`fugazi::sources`) rely on. `cli` pulls in everything only the binary uses —
# notably plotters' `ttf` feature, which links the fontconfig/freetype system
# libs, so non-CLI consumers (e.g. the Python wheel, which builds inside
# manylinux containers without those libs) depend with
# `default-features = false, features = ["sources"]`. Both default-on so
# `cargo build` builds the CLI unchanged.
[features]
default = ["sources", "cli"]
sources = ["dep:reqwest", "dep:tokio", "dep:time", "dep:thiserror"]
cli = [
    "sources",
    "dep:clap",
    "dep:clap_complete",
    "dep:serde_norway",
    "dep:csv",
    "dep:anyhow",
    "dep:indicatif",
    "dep:console",
    "dep:rayon",
    "dep:plotters",
    "dep:interim",
]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
clap_complete = { version = "4", optional = true }
serde = { version = "1", features = ["derive"] }
serde_norway = { version = "0.9", optional = true }
serde_json = "1"
csv = { version = "1", optional = true }
anyhow = { version = "1", optional = true }
indicatif = { version = "0.17", optional = true }
console = { version = "0.15", optional = true }
rayon = { version = "1", optional = true }
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "area_series", "ttf"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"], optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros"], optional = true }
time = { version = "0.3", features = ["formatting", "parsing", "macros"], optional = true }
thiserror = { version = "1", optional = true }
interim = { version = "0.2.1", default-features = false, features = ["std", "time_0_3"], optional = true }

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"

# The Python bindings live in their own workspace member (`python/`), which is
# the only crate that pulls in PyO3 — see that crate's README for build
# instructions.
[workspace]
members = ["python"]
resolver = "2"
