[package]
name = "fugazi"
version = "0.24.0"
edition = "2024"
description = "A library of incremental technical-analysis indicators, signals and strategies"
license = "MIT"
repository = "https://github.com/acpuchades/fugazi"
readme = "README.md"
keywords = ["trading", "technical-analysis", "indicators", "finance", "incremental"]
categories = ["finance", "mathematics"]

[lib]
name = "fugazi"
path = "src/lib.rs"

# The `fugazi` binary is the command-line backtester: it loads a strategy.yml,
# assembles candle data from one or more --series, and runs it through a paper
# wallet (see `src/cli/`). Its dependencies are gated behind the `cli` feature
# below; the library proper keeps its dependency footprint minimal — `serde` +
# `serde_json` (used in the `sources` module and by the CLI's YAML/JSON plumbing),
# `time` (for the calendar sources' `Timestamp` decomposition), and `statrs` (for
# the standard-normal CDF/inverse-CDF that back the higher-moment Sharpe
# corrections in `fugazi::metrics`). Everything else is behind the `sources` /
# `cli` features.
[[bin]]
name = "fugazi"
path = "src/cli/main.rs"
required-features = ["cli"]

# `sources` pulls in the async HTTP stack the remote candle providers
# (`fugazi::sources`) rely on. `cli` pulls in everything only the binary uses.
# All CLI deps are pure Rust — no system libraries link in, so the Python wheel
# (which still turns `cli` off via `default-features = false, features = ["sources"]`)
# and the CLI build follow the same manylinux-friendly path. Both features are
# default-on so `cargo build` builds the CLI unchanged.
[features]
default = ["sources", "cli"]
sources = ["dep:reqwest", "dep:tokio", "dep:thiserror"]
# `runtime` compiles the pure, no-extra-deps type-erasure vocabulary
# (`fugazi::runtime`) that YAML/JSON-driven builders and the Python bindings
# use to nest indicators whose types are only known at runtime. The `cli`
# feature implies it; a caller who only wants that vocabulary can enable it
# on its own (`default-features = false, features = ["runtime"]`).
runtime = []
# `parallel` exposes `fugazi::backtest::run_many` — a rayon-backed ensemble
# driver that par-iters over `(strategy, wallet)` pairs against a shared
# snapshot stream. The `cli` feature implies it (rayon is already in the
# CLI's own dep list); a caller who wants the ensemble primitive without
# the CLI enables it on its own (`features = ["parallel"]`).
parallel = ["dep:rayon"]
cli = [
    "sources",
    "runtime",
    "parallel",
    "dep:clap",
    "dep:clap_complete",
    "dep:serde_norway",
    "dep:csv",
    "dep:anyhow",
    "dep:indicatif",
    "dep:console",
    "dep:interim",
]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
clap_complete = { version = "4", optional = true }
serde = { version = "1", features = ["derive"] }
serde_norway = { version = "0.9", optional = true }
serde_json = "1"
csv = { version = "1", optional = true }
anyhow = { version = "1", optional = true }
indicatif = { version = "0.18", optional = true }
console = { version = "0.16", optional = true }
rayon = { version = "1", optional = true }
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls", "gzip"], optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros"], optional = true }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
statrs = { version = "0.18", default-features = false }
thiserror = { version = "2", optional = true }
interim = { version = "0.2.1", default-features = false, features = ["std", "time_0_3"], optional = true }

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"

# The Python bindings live in their own workspace member (`python/`), which is
# the only crate that pulls in PyO3 — see that crate's README for build
# instructions.
[workspace]
members = ["python"]
resolver = "2"
