[package]
name = "fugazi-python"
version = "0.1.1"
edition = "2024"
description = "Python bindings for the fugazi incremental technical-analysis library"
license = "MIT"
publish = false

# The compiled extension module is imported as `fugazi` from Python. The package
# is named `fugazi-python` so it does not collide with the core `fugazi` crate it
# depends on (renamed to `fugazi_core` below to avoid an in-crate name clash).
[lib]
name = "fugazi"
crate-type = ["cdylib"]

[dependencies]
fugazi_core = { package = "fugazi", path = ".." }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
