[package]
name = "fugazi-python"
version = "0.11.0"
edition = "2024"
description = "Python bindings for the fugazi incremental technical-analysis library"
license = "MIT"
publish = false

# The compiled extension module is imported as `fugazi` from Python. The package
# is named `fugazi-python` so it does not collide with the core `fugazi` crate it
# depends on (renamed to `fugazi_core` below to avoid an in-crate name clash).
[lib]
name = "fugazi"
crate-type = ["cdylib"]

[dependencies]
# `sources` only — skipping the default `cli` feature keeps clap/plotters/etc.
# out of the wheel; plotters' `ttf` feature in particular links fontconfig,
# which the manylinux build containers don't ship.
fugazi_core = { package = "fugazi", path = "..", default-features = false, features = ["sources"] }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
time = { version = "0.3", features = ["formatting"] }
