[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "fugazi"
version = "0.31.1"
description = "Python bindings for the fugazi incremental technical-analysis library"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["trading", "technical-analysis", "indicators", "finance", "incremental"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Repository = "https://github.com/acpuchades/fugazi"

[project.optional-dependencies]
test = ["pytest", "numpy", "pandas", "polars"]

[tool.maturin]
# The crate's `[lib] name = "fugazi"` produces the importable module.
module-name = "fugazi"
features = ["pyo3/extension-module"]
